# philix

./: LICENSE.txt  Makefile.am  Makefile.in  README  configure  configure.ac
include/: phi_console.h  phi_linux.h  phi_mmap.h  phi_sbox.h
inky/: Makefile  boot.S  elf64.c  inky.lds  k1om.cfg  lib.c  loader.c
inky/include/errors/: errno.h
inky/multiboot/: Makefile  inky_mbgen.c
inky/patcher/: Makefile
src/: Makefile.am  Makefile.in  philix.c  philix_sbox_dump.c
winky/: Makefile  boot.S  cga.c  cga.h  linker.lds  main.c  winky.h  xeon_phi.c  xeon_phi.h
